--- a/kavi%20website/09262016/test.html
+++ b/kavi%20website/09262016/test.html
@@ -15,6 +15,8 @@
 <script type='text/javascript' src='landingPage.js'></script>
 </head>
 <body>
+
+    <h1>HI welcome to my page</h1>
 	<div class="page-headerone">
 		<div class="row">
 			<div class="col-md-3"></div>
